<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nikolai.lengthUnitTranslator.MainActivity">

    <EditText
        android:id="@+id/inputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_above="@+id/kmBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputValue"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meters"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_above="@+id/inputValue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp" />

    <Button
        android:id="@+id/kmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="km"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/ftBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/kmBtn"
        android:layout_alignBottom="@+id/kmBtn"
        android:layout_toEndOf="@+id/kmBtn"
        android:layout_toRightOf="@+id/kmBtn"
        android:text="ft"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="231dp" />

    <Button
        android:id="@+id/cmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/kmBtn"
        android:layout_alignBottom="@+id/kmBtn"
        android:layout_toLeftOf="@+id/kmBtn"
        android:layout_toStartOf="@+id/kmBtn"
        android:text="cm"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="139dp" />

    <TextView
        android:id="@+id/outputValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kmBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>
